examples/errors/stack_underflow.aaa
fn foo begin
    drop
end
